fix typo from fixing typo incorrectly

--- a/src/posts/published/what-is-a-factory-function/index.mdx
+++ b/src/posts/published/what-is-a-factory-function/index.mdx
@@ -117,7 +117,7 @@ const createFish = () => ({
 })
 ```
 
-There are more properties we could add, but we should be careful with adding to many too the base object. Next, we can create factories for objects based on what they do. Focusing on what something does, versus what it _is_ is a great way to find these kinds of compositional pieces:
+There are more properties we could add, but we should be careful with adding too many to the base object. Next, we can create factories for objects based on what they do. Focusing on what something does, versus what it _is_ is a great way to find these kinds of compositional pieces:
 
 ```javascript
 const createFlyer = () => ({
