update excerpt in factory function to use code tags

--- a/src/posts/published/what-is-a-factory-function/index.mdx
+++ b/src/posts/published/what-is-a-factory-function/index.mdx
@@ -4,7 +4,7 @@ slug: 'what-is-a-factory-function'
 title: 'What is a Factory Function?'
 subtitle: null
 description: 'Factory functions help us quickly create objects. They make use of closures to have private values and functions, all while avoiding the `this` keyword. Learn how to use them in this article.'
-excerpt: 'Factory functions help us quickly create objects. They make use of closures to have private values and functions, all while avoiding the `this` keyword. Learn how to use them in this article.'
+excerpt: 'Factory functions help us quickly create objects. They make use of closures to have private values and functions, all while avoiding the <code>this</code> keyword. Learn how to use them in this article.'
 tags: ['JavaScript', 'Computer Science']
 relatedPostsSlugs: ['what-is-a-closure']
 ---
