add description to dep injection post

--- a/src/posts/published/dependency-injection-and-default-parameters/index.mdx
+++ b/src/posts/published/dependency-injection-and-default-parameters/index.mdx
@@ -3,8 +3,8 @@ date: '2021-08-19'
 slug: 'dependency-injection-and-default-parameters'
 title: 'Dependency Injection and Default Parameters'
 subtitle: 'or One Way to Make Your Programs More Flexible'
-description: ''
-excerpt: null
+description: 'Learn how to increase the flexibility and testability of your programs by passing dependencies in as function arguments alongside default parameters.'
+excerpt: 'Learn how to increase the flexibility and testability of your programs by passing dependencies in as function arguments alongside default parameters.'
 tags: ['JavaScript']
 relatedPostsSlugs: []
 ---
