--- a/src/posts/published/the-folded-code-test/index.mdx
+++ b/src/posts/published/the-folded-code-test/index.mdx
@@ -9,4 +9,4 @@ tags: ['JavaScript']
 relatedPostsSlugs: []
 ---
 
-One underrated feature of code editors is code folding.
+One underrated feature of code editors is "code folding". I use it all the time, and I think it can help you write better code, but why it helps might not be obvious.
