add video to use encapsulation

--- a/src/posts/published/use-encapsulation/index.mdx
+++ b/src/posts/published/use-encapsulation/index.mdx
@@ -12,6 +12,10 @@ relatedPostsSlugs:
 
 import RelatedTweet from './RelatedTweet'
 
+**Update November 22nd, 2021:** I added a recording of my CascadiaJS on this topic to the end of this post. Enjoy!
+
+---
+
 Recently, I shared this tweet:
 
 <RelatedTweet />
@@ -283,3 +287,9 @@ Following the installation instructions, you'll see that `prefer-custom-hooks` w
 ### Summary
 
 By opting to write all the hooks consumed by your components as custom ones, you will be providing future devs (including yourself) useful context by encapsulating all the pieces of a concern into a single function. By doing this, you gain all the benefits of proper encapsulation and make your components more declarative. You might even gain a few useful reusable hooks in the process.
+
+### useEncapsulation Talk at CascadiaJS
+
+I recently gave a talk on this topic at the CascadiaJS conference and wanted to share that recording with you. Enjoy!
+
+<YoutubeEmbed src="https://www.youtube.com/embed/cyM70d9IpSg" />
