wip for folded code post

--- a/src/posts/published/the-folded-code-test/index.mdx
+++ b/src/posts/published/the-folded-code-test/index.mdx
@@ -9,4 +9,4 @@ tags: ['JavaScript']
 relatedPostsSlugs: []
 ---
 
-One underrated feature of code editors is "code folding". I use it all the time, and I think it can help you write better code, but why it helps might not be obvious.
+One underrated feature of code editors is "code folding", the ability to fold a block of code, be it some HTML, a CSS class, or a JavaScript function. I use this feature all the time, and recently, it dawned on me that folding your code might help you write better code. Allow me to elaborate.
