--- a/src/posts/published/the-folded-code-test/index.mdx
+++ b/src/posts/published/the-folded-code-test/index.mdx
@@ -41,10 +41,10 @@ I can think of two strong examples where the "folded code" test can be seen in a
 Think about a block of tests, as we unfold it, we get a more detailed view of the forest. A completely folded test might only say:
 
 ```javascript
-describe('createStack', () => {})
+describe('Stack', () => {})
 ```
 
-We know that this tests something called `createStack`, which gives us some indication of what we might expect. Unfolding a layer reveals more detail:
+We know that this tests something called `Stack`, which gives us some indication of what we might expect. Unfolding a layer reveals more detail:
 
 ```javascript
 describe('Stack', () => {
