fix: update a verb in 'job history'

--- a/src/posts/published/job-history/index.mdx
+++ b/src/posts/published/job-history/index.mdx
@@ -117,7 +117,7 @@ In truth, I should have taken several months off before starting. Webflow destro
 
 I was burnt to a crisp, but hadn't really internalized this fact yet. The endorphins from doing something new kept me going for the first few weeks, but hitting the first hurdle, I smacked right into it. I didn't have the "legs" to jump it.
 
-Early on, I ran into some technical challenges I just couldn't figure out how to solve. It derailed what was remaining of my confidence. I was stressed as hell, not sleeping well. I starting having some night terrors, scaring my wife half to death screaming in my sleep.
+Early on, I ran into some technical challenges I just couldn't figure out how to solve. It derailed what was remaining of my confidence. I was stressed as hell, not sleeping well. I started having some night terrors, scaring my wife half to death screaming in my sleep.
 
 The culmination of my stress happened one morning when I heard a slam outside my house. I was _absolutely_ convinced that someone was breaking into the house and they had cut the power. I leapt the entire width of our bed and sprinted towards the intruder, ready to do whatever necessary to stop them. My heart rate had gone from 60 to 140. I could feel the adrenaline.
 
