--- a/src/posts/published/job-history/index.mdx
+++ b/src/posts/published/job-history/index.mdx
@@ -5,7 +5,7 @@ title: 'Job History'
 subtitle: null
 description: 'My take on my tumultuous job history. Fairly certain this will not help in any way other than the catharsis of speaking some truth.'
 excerpt: 'My take on my tumultuous job history. Fairly certain this will not help in any way other than the catharsis of speaking some truth.'
-tags: []
+tags: ['Career', 'Thoughts']
 relatedPostsSlugs: []
 ---
 
