--- a/src/posts/published/my-course-platform/index.mdx
+++ b/src/posts/published/my-course-platform/index.mdx
@@ -5,7 +5,7 @@ title: 'My Course Platform'
 subtitle: 'How and Why I Built It'
 description: 'I am about to launch a course platform of my own making at https://courses.kyleshevlin.com. It is not fancy. But it is my own.'
 excerpt: 'I am about to launch a course platform of my own making at <a href="https://courses.kyleshevlin.com">courses.kyleshevlin.com</a>. It is not fancy. But it is my own. Learn how and why I built it.'
-tags: []
+tags: ['Career', 'Thoughts']
 relatedPostsSlugs: []
 relevantCourseNickname: 'array-reduce'
 ---
