update frontmatter for conways post

--- a/src/posts/published/conways-game-of-life/index.mdx
+++ b/src/posts/published/conways-game-of-life/index.mdx
@@ -3,10 +3,15 @@ date: '2022-02-03'
 slug: 'conways-game-of-life'
 title: "Conway's Game of Life"
 subtitle: null
-description: ''
-excerpt: null
-tags: ['React']
-relatedPostsSlugs: []
+description: "Learn how to build Conway's Game of Life with JavaScript, React and the simulation pattern."
+excerpt: "Learn how to build Conway's Game of Life with JavaScript, React and the simulation pattern."
+tags: ['JavaScript', 'React']
+relatedPostsSlugs:
+  [
+    'simulation-pattern',
+    'what-is-a-factory-function',
+    'just-enough-fp-pointfree',
+  ]
 ---
 
 import GameOfLife from './GameOfLife'
