make conways responsive

--- a/src/posts/published/conways-game-of-life/index.mdx
+++ b/src/posts/published/conways-game-of-life/index.mdx
@@ -424,7 +424,9 @@ The only thing left for you to do is tweak some styles. Specifically, you should
 
 Here's a version of our game right here. Click `randomize` and get the simulation started:
 
-<GameOfLife />
+<Spacer vert={2}>
+  <GameOfLife />
+</Spacer>
 
 ### Recap
 
