--- a/src/posts/published/simulation-pattern/index.mdx
+++ b/src/posts/published/simulation-pattern/index.mdx
@@ -37,7 +37,7 @@ function createSimulation(initialState) {
   }
 }
 
-const sim = createSim()
+const sim = createSimulation()
 sim.tick()
 sim.getState()
 ```
